--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang=en>
+  <head>
+    <meta charset="utf">
+    <title>CSD112 - Tarynn Levesque</title>
+  </head>
+  <body>
+    <h1>CSD112 - Tarynn Levesque</h1>
+    <p>This is the home page</p>
+  </body>
+</html?
+  
