Updating Website for Lab 5

--- a/glossary.html
+++ b/glossary.html
@@ -26,23 +26,19 @@
         </nav>
       </header>
       <main>
-        <h1>Welcome to Tarynn's website</h1>
-        <p>I am an adult student, returning to school to learn programming after dropping out of graphic design over a decade ago. Looking to try out something more up my alley, I have joined the Computer Programmer course at Sault College for a second try at furthering my education.</p>
-        <p>Outside of programming, I'm an avid gamer - both tabletop and video games. I enjoy games such as Dungeons and Dragons, Exalted, and Blades in the Dark for tabletop RPGs. FOr video games, I'm an avid player of Final Fantasy XIV, the Witcher 3, and the Tales RPG series.</p>
-        <h2>My Favourite Things</h2>
-        <a href="https://bladesinthedark.com"><img src="images/bitdlogo.jpg"></a>
-        <h3>Tabletop RPGs</h3>
-        <ol>
-          <li>Exalted</li>
-          <li>Legend of the Five Rings</li>
-          <li>Shadowrun</li>
-        </ol>
-        <!-- Found Me!-->
-        <h3>Haiku</h3>
-        <p> Over the wintry<br>
-          Forest, winds howl in rage<br>
-          With no leaves to blow.<br>
-        <cite>"Over the Wintry" by <span class="author">Natsumi Sōsuke</span></cite></p>
+        <h1>Glossary</h1>
+        <dl>
+            <dt>HTML</dt>
+            <dd>Hypertext Markup Language, a standardized system for tagging text files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.</dd>
+            <dt>CSS</dt>
+            <dd>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML.</dd>
+            <dt>Attributes</dt>
+            <dd>HTML attributes provide additional information about HTML elements.</dd>
+            <dt>Headings</dt>
+            <dd>HTML headings are titles or subtitles that you want to display on a webpage.</dd>
+            <dt>Tables</dt>
+            <dd>HTML tables allow web developers to arrange data into rows and columns.</dd>
+        </dl>
       </main>
       <footer>
         <hr>
