--- a/links.html
+++ b/links.html
@@ -26,23 +26,11 @@
         </nav>
       </header>
       <main>
-        <h1>Welcome to Tarynn's website</h1>
-        <p>I am an adult student, returning to school to learn programming after dropping out of graphic design over a decade ago. Looking to try out something more up my alley, I have joined the Computer Programmer course at Sault College for a second try at furthering my education.</p>
-        <p>Outside of programming, I'm an avid gamer - both tabletop and video games. I enjoy games such as Dungeons and Dragons, Exalted, and Blades in the Dark for tabletop RPGs. FOr video games, I'm an avid player of Final Fantasy XIV, the Witcher 3, and the Tales RPG series.</p>
-        <h2>My Favourite Things</h2>
-        <a href="https://bladesinthedark.com"><img src="images/bitdlogo.jpg"></a>
-        <h3>Tabletop RPGs</h3>
-        <ol>
-          <li>Exalted</li>
-          <li>Legend of the Five Rings</li>
-          <li>Shadowrun</li>
-        </ol>
-        <!-- Found Me!-->
-        <h3>Haiku</h3>
-        <p> Over the wintry<br>
-          Forest, winds howl in rage<br>
-          With no leaves to blow.<br>
-        <cite>"Over the Wintry" by <span class="author">Natsumi Sōsuke</span></cite></p>
+        <h1>Useful Links</h1>
+        <ul>
+            <li><a href="https://validator.w3.org/nu/" target="_blank">HTML Validator</li>
+            <li><a href="https://realfavicongenerator.net/" target="_blank">Favicon Generator</a></li>
+        </ul>
       </main>
       <footer>
         <hr>
