FIxed formatting and validation errors

--- a/glossary.html
+++ b/glossary.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang=en>
-  <head>
-    <meta charset="utf">
+
+<head>
+    <meta charset="utf-8">
     <meta name="author" content="Tarynn Levesque">
     <meta name="description" content="Introduction to HTML Website for CSD112">
     <title>CSD112 - Tarynn Levesque</title>
@@ -13,41 +14,48 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="width-wrap">
-      <header id="top">
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="glossary.html">Glossary</a></li>
-          </ul>
-        </nav>
-      </header>
-      <main>
-        <h1>Glossary</h1>
-        <dl>
-            <dt>HTML</dt>
-            <dd>Hypertext Markup Language, a standardized system for tagging text files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.</dd>
-            <dt>CSS</dt>
-            <dd>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML.</dd>
-            <dt>Attributes</dt>
-            <dd>HTML attributes provide additional information about HTML elements.</dd>
-            <dt>Headings</dt>
-            <dd>HTML headings are titles or subtitles that you want to display on a webpage.</dd>
-            <dt>Tables</dt>
-            <dd>HTML tables allow web developers to arrange data into rows and columns.</dd>
-        </dl>
-      </main>
-      <footer>
-        <hr>
-        <blockquote>“I think love is stronger than habits or circumstances. I think it is possible to keep yourself for someone for a long time and still remember why you were waiting when she comes at last.”</blockquote>
-        <cite>&#8211; <span class="author">Peter S. Beagle</span>, The Last Unicorn</cite>
-        <p>&#169; 2022 <a href="mailto:aillin.levesque@student.saultcollege.ca?Subject=Message%20from%20CSD112%20Website">Aillin Tarynn Levesque</a></p>
-      </footer>
-      <a href="#top" title="Back to top">◤</a>
+        <header id="top">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="links.html">Links</a></li>
+                    <li><a href="glossary.html">Glossary</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>Glossary</h1>
+            <dl>
+                <dt>HTML</dt>
+                <dd>Hypertext Markup Language, a standardized system for tagging text files to achieve font, color,
+                    graphic, and hyperlink effects on World Wide Web pages.</dd>
+                <dt>CSS</dt>
+                <dd>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a
+                    document written in a markup language such as HTML or XML.</dd>
+                <dt>Attributes</dt>
+                <dd>HTML attributes provide additional information about HTML elements.</dd>
+                <dt>Headings</dt>
+                <dd>HTML headings are titles or subtitles that you want to display on a webpage.</dd>
+                <dt>Tables</dt>
+                <dd>HTML tables allow web developers to arrange data into rows and columns.</dd>
+            </dl>
+        </main>
+        <footer>
+            <hr>
+            <blockquote>“I think love is stronger than habits or circumstances. I think it is possible to keep yourself
+                for someone for a long time and still remember why you were waiting when she comes at last.”
+            </blockquote>
+            <cite>&#8211; <span class="author">Peter S. Beagle</span>, The Last Unicorn</cite>
+            <p>&#169; 2022 <a
+                    href="mailto:aillin.levesque@student.saultcollege.ca?Subject=Message%20from%20CSD112%20Website">Aillin
+                    Tarynn Levesque</a></p>
+        </footer>
+        <a href="#top" title="Back to top">◤</a>
     </div>
-  </body>
-</html?
-  
+</body>
+
+</html>
