--- a/index.html
+++ b/index.html
@@ -1,57 +1,67 @@
 <!DOCTYPE html>
 <html lang=en>
-  <head>
-    <meta charset="utf">
-    <meta name="author" content="Tarynn Levesque">
-    <meta name="description" content="Introduction to HTML Website for CSD112">
-    <title>CSD112 - Tarynn Levesque</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-  </head>
-  <body>
-    <div class="width-wrap">
-      <header id="top">
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="glossary.html">Glossary</a></li>
-          </ul>
-        </nav>
-      </header>
-      <main>
-        <h1>Welcome to Tarynn's website</h1>
-        <p>I am an adult student, returning to school to learn programming after dropping out of graphic design over a decade ago. Looking to try out something more up my alley, I have joined the Computer Programmer course at Sault College for a second try at furthering my education.</p>
-        <p>Outside of programming, I'm an avid gamer - both tabletop and video games. I enjoy games such as Dungeons and Dragons, Exalted, and Blades in the Dark for tabletop RPGs. FOr video games, I'm an avid player of Final Fantasy XIV, the Witcher 3, and the Tales RPG series.</p>
-        <h2>My Favourite Things</h2>
-        <a href="https://bladesinthedark.com"><img src="images/bitdlogo.jpg"></a>
-        <h3>Tabletop RPGs</h3>
-        <ol>
-          <li>Exalted</li>
-          <li>Legend of the Five Rings</li>
-          <li>Shadowrun</li>
-        </ol>
-        <!-- Found Me!-->
-        <h3>Haiku</h3>
-        <p> Over the wintry<br>
-          Forest, winds howl in rage<br>
-          With no leaves to blow.<br>
-        <cite>"Over the Wintry" by <span class="author">Natsumi Sōsuke</span></cite></p>
-      </main>
-      <footer>
-        <hr>
-        <blockquote>“I think love is stronger than habits or circumstances. I think it is possible to keep yourself for someone for a long time and still remember why you were waiting when she comes at last.”</blockquote>
-        <cite>&#8211; <span class="author">Peter S. Beagle</span>, The Last Unicorn</cite>
-        <p>&#169; 2022 <a href="mailto:aillin.levesque@student.saultcollege.ca?Subject=Message%20from%20CSD112%20Website">Aillin Tarynn Levesque</a></p>
-      </footer>
-      <a href="#top" title="Back to top">◤</a>
-    </div>
-  </body>
-</html?
-  
+
+<head>
+  <meta charset="utf-8">
+  <meta name="author" content="Tarynn Levesque">
+  <meta name="description" content="Introduction to HTML Website for CSD112">
+  <title>CSD112 - Tarynn Levesque</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+  <div class="width-wrap">
+    <header id="top">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="links.html">Links</a></li>
+          <li><a href="glossary.html">Glossary</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Welcome to Tarynn's website</h1>
+      <p>I am an adult student, returning to school to learn programming after dropping out of graphic design over a
+        decade ago. Looking to try out something more up my alley, I have joined the Computer Programmer course at Sault
+        College for a second try at furthering my education.</p>
+      <p>Outside of programming, I'm an avid gamer - both tabletop and video games. I enjoy games such as Dungeons and
+        Dragons, Exalted, and Blades in the Dark for tabletop RPGs. FOr video games, I'm an avid player of Final Fantasy
+        XIV, the Witcher 3, and the Tales RPG series.</p>
+      <h2>My Favourite Things</h2>
+      <a href="https://bladesinthedark.com"><img src="images/bitdlogo.jpg" alt="Blades in the Dark logo"></a>
+      <h3>Tabletop RPGs</h3>
+      <ol>
+        <li>Exalted</li>
+        <li>Legend of the Five Rings</li>
+        <li>Shadowrun</li>
+      </ol>
+      <!-- Found Me!-->
+      <h3>Haiku</h3>
+      <p> Over the wintry<br>
+        Forest, winds howl in rage<br>
+        With no leaves to blow.<br>
+        <cite>"Over the Wintry" by <span class="author">Natsumi Sōsuke</span></cite>
+      </p>
+    </main>
+    <footer>
+      <hr>
+      <blockquote>“I think love is stronger than habits or circumstances. I think it is possible to keep yourself for
+        someone for a long time and still remember why you were waiting when she comes at last.”</blockquote>
+      <cite>&#8211; <span class="author">Peter S. Beagle</span>, The Last Unicorn</cite>
+      <p>&#169; 2022 <a
+          href="mailto:aillin.levesque@student.saultcollege.ca?Subject=Message%20from%20CSD112%20Website">Aillin Tarynn
+          Levesque</a></p>
+    </footer>
+    <a href="#top" title="Back to top">◤</a>
+  </div>
+</body>
+
+</html>
