--- a/links.html
+++ b/links.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang=en>
-  <head>
-    <meta charset="utf">
+
+<head>
+    <meta charset="utf-8">
     <meta name="author" content="Tarynn Levesque">
     <meta name="description" content="Introduction to HTML Website for CSD112">
     <title>CSD112 - Tarynn Levesque</title>
@@ -13,33 +14,38 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="width-wrap">
-      <header id="top">
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="glossary.html">Glossary</a></li>
-          </ul>
-        </nav>
-      </header>
-      <main>
-        <h1>Useful Links</h1>
-        <ul>
-            <li><a href="https://validator.w3.org/nu/" target="_blank">HTML Validator</li>
-            <li><a href="https://realfavicongenerator.net/" target="_blank">Favicon Generator</a></li>
-        </ul>
-      </main>
-      <footer>
-        <hr>
-        <blockquote>“I think love is stronger than habits or circumstances. I think it is possible to keep yourself for someone for a long time and still remember why you were waiting when she comes at last.”</blockquote>
-        <cite>&#8211; <span class="author">Peter S. Beagle</span>, The Last Unicorn</cite>
-        <p>&#169; 2022 <a href="mailto:aillin.levesque@student.saultcollege.ca?Subject=Message%20from%20CSD112%20Website">Aillin Tarynn Levesque</a></p>
-      </footer>
-      <a href="#top" title="Back to top">◤</a>
+        <header id="top">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="links.html">Links</a></li>
+                    <li><a href="glossary.html">Glossary</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>Useful Links</h1>
+            <ul>
+                <li><a href="https://validator.w3.org/nu/" target="_blank">HTML Validator</li>
+                <li><a href="https://realfavicongenerator.net/" target="_blank">Favicon Generator</a></li>
+            </ul>
+        </main>
+        <footer>
+            <hr>
+            <blockquote>“I think love is stronger than habits or circumstances. I think it is possible to keep yourself
+                for someone for a long time and still remember why you were waiting when she comes at last.”
+            </blockquote>
+            <cite>&#8211; <span class="author">Peter S. Beagle</span>, The Last Unicorn</cite>
+            <p>&#169; 2022 <a
+                    href="mailto:aillin.levesque@student.saultcollege.ca?Subject=Message%20from%20CSD112%20Website">Aillin
+                    Tarynn Levesque</a></p>
+        </footer>
+        <a href="#top" title="Back to top">◤</a>
     </div>
-  </body>
-</html?
-  
+</body>
+
+</html>
